# Faker-Synthesizer-MockData

./: .gitignore  .pdm-python  README.md  mock_data.ipynb  pyproject.toml
